rules.v4
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.1.0/24 -o eth0 -j MASQUERADE -m comment --comment "NAT"
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -i lo -j ACCEPT -m comment --comment "loopback"
# ICMP
-A INPUT -p icmp --icmp-type time-exceeded -j ACCEPT
# MTU autodiscovery
-A INPUT -p icmp --icmp-type destination-unreachable -j ACCEPT -m comment --comment "MTU autodiscovery"
-A INPUT -p icmp --icmp-type fragmentation-needed -j ACCEPT -m comment --comment "MTU autodiscovery"
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT -m comment --comment "SSH"
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "NAT" -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -o eth0 -m comment --comment "NAT" -j ACCEPT
COMMIT
